2012-11-23  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.1 ===

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	  - Added missing dependency with gstttmlprivate.h

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	  - Remove dependency with LICENSE.LGPL

2012-11-23  Fluendo <support@fluendo.com>

	* gst-fluendo-ttml.spec.in: Remove unnecessary dependencies.

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_span_compose),
	(gst_ttmlparse_send_buffer), (gst_ttmlparse_event_new_span_end),
	(gst_ttmlparse_timeline_flush), (gst_ttmlparse_add_characters),
	(gst_ttmlparse_sax_document_end), (gst_ttmlparse_cleanup):
	* src/gstttmlprivate.h:
	  - Finished implementation of the assume-ordered-spans property.

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_span_new),
	(gst_ttmlparse_attribute_parse),
	(gst_ttmlparse_state_set_attribute),
	(gst_ttmlparse_state_get_attribute),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_state_reset):
	* src/gstttmlprivate.h:
	  - Support for the xml:space attribute which controls how CR chars
	    are to be treated.

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_send_buffer),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_sax_characters):
	  - Check for blank nodes in the proper place
	  - Do not output empty buffers

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_is_blank_node),
	(gst_ttmlparse_add_characters):
	  - Do not process blank nodes (only containing whitespace)

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_node_type_parse),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlprivate.h:
	  - Support for the <br /> tag

2012-11-22  Xavi Artigas  <xartigas@fluendo.com>
