@@ -1,3 +1,8 @@
+2012-11-23  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlprivate.h:
+	  - Provide a replacement for GST_MEMDUMP on older GStreamers
+
 2012-11-23  Release Maker <nomail@fluendo.com>
 
 	* configure.ac: Back to TRUNK.
